# ReguScan

./: .gitignore  ARCHITECTURE.md  CINEMATIC_UI_REDESIGN_REPORT.md  GUIDE.md  PORTFOLIO_NOTES.md  PROJECT_IMPROVEMENT_REPORT.md  RAZORPAY_MIGRATION_REPORT.md  RAZORPAY_SUBSCRIPTION_REPORT.md  README.md  SCORING_DEBUG_REPORT.md  SECURITY_FIX_REPORT.md  UI_IMPROVEMENT_REPORT.md  UI_REDESIGN_REPORT.md  design.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_razorpay_billing_fields.py  003_add_billing_plan_metadata.py
backend/app/: main.py
backend/app/api/v1/endpoints/: ai_systems.py  auth.py  scans.py  websites.py
backend/app/core/: auth.py  config.py  plans.py  redis_client.py  url_safety.py
backend/app/db/: session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: clerk_users.py
backend/app/tasks/: celery_app.py  classifier.py  crawler.py  detector.py  gap_analyzer.py  notifier.py  report_generator.py  scan_workflow.py  scheduled.py
backend/app/utils/: async_helpers.py
backend/scripts/: seed_pinecone.py
backend/tests/: test_api.py
docs/: demo-ai-target.html
frontend/: .dockerignore  .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/demo-ai-target/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/sample-report/: page.tsx
frontend/app/security/: page.tsx
frontend/components/: AnimatedComplianceBackground.tsx
frontend/components/dashboard/: Sidebar.tsx  TokenInjector.tsx
frontend/components/landing/: BrowserScanFrame.tsx  CinematicPrimitives.tsx  DemoVideoModal.tsx  EvidencePreviewCards.tsx  HoverExpandCards.tsx  (+4 more)
tasks/: lessons.md  todo.md
(+7 files in other folders)
