[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "reguscan-backend"
version = "0.1.0"
description = "ReguScan EU AI Act Compliance Scanner - Backend API"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "gunicorn==23.0.0",
    # Async
    "httpx==0.27.2",
    "anyio==4.7.0",
    # Database
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    # Cache / Queue
    "celery==5.4.0",
    "flower==2.0.1",
    "redis==5.2.1",
    "kombu==5.4.2",
    # Auth
    "python-jose[cryptography]==3.3.0",
    "svix==1.36.0",
    # Validation
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    # Payments
    "stripe==11.3.0",
    # AI / LLM
    "groq==0.12.0",
    "google-generativeai==0.8.3",
    "pinecone-client==5.0.1",
    # Web crawling
    "playwright==1.49.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    # PDF generation
    "weasyprint==62.3",
    "jinja2==3.1.4",
    # Email
    "resend==2.32.2",
    # Utils
    "python-multipart==0.0.20",
    "python-dotenv==1.0.1",
    "slowapi==0.1.9",
    "structlog==24.4.0",
    "sentry-sdk[fastapi]==2.19.2",
    "boto3==1.35.88",
    "pillow==11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
    "factory-boy==3.3.1",
    "ruff==0.8.3",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
